update all BB links

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -50,7 +50,7 @@
     <a href="https://bintray.com/grouplens/lenskit-releases/lenskit/<%= lenskit.version %>/general"><%= lenskit.version %></a>
     (<a href="./maven-site/releases/lenskit-<%= lenskit.version %>.html">release notes</a>)<br>
     Fork it on
-    <a href="http://bitbucket.org/grouplens/lenskit">BitBucket</a> (includes wiki and bug tracker)<br>
+    <a href="http://github.com/grouplens/lenskit">Github</a> (includes wiki and bug tracker)<br>
     <a href="https://wwws.cs.umn.edu/mm-cs/listinfo/lenskit">Mailing List</a><br>
   </div>
 
