update for gradle-jruby and 2.0.4

--- a/layouts/default.html
+++ b/layouts/default.html
@@ -47,7 +47,7 @@
 <aside id="sidebar">
   <div class="sidebox">
     Latest version:
-    <a href="https://bintray.com/grouplens/lenskit-releases/lenskit/<%= lenskit.version %>/general"><%= lenskit.version %></a>
+    <a href="/downloads/"><%= lenskit.version %></a>
     (<a href="./maven-site/releases/lenskit-<%= lenskit.version %>.html">release notes</a>)<br>
     Fork it on
     <a href="http://github.com/grouplens/lenskit">Github</a> (includes wiki and bug tracker)<br>
