--- a/layouts/default.html
+++ b/layouts/default.html
@@ -47,8 +47,8 @@
 <aside id="sidebar">
   <div class="sidebox">
     Latest version:
-    <a href="/downloads/"><%= lenskit.version %></a>
-    (<a href="./maven-site/releases/lenskit-<%= lenskit.version %>.html">release notes</a>)<br>
+    <a href="/downloads/"><%= @config[:lenskitVersion] %></a>
+    (<a href="./maven-site/releases/lenskit-<%= @config[:lenskitVersion] %>.html">release notes</a>)<br>
     Fork it on
     <a href="http://github.com/grouplens/lenskit">Github</a> (includes wiki and bug tracker)<br>
     <a href="https://wwws.cs.umn.edu/mm-cs/listinfo/lenskit">Mailing List</a><br>
