--- a/layouts/default.html
+++ b/layouts/default.html
@@ -9,24 +9,12 @@
         href="/s/fonts/liberation/stylesheet.css">
   <link rel="stylesheet" type="text/css"
         href="/s/fonts/inconsolata/stylesheet.css">
+  <link rel="stylesheet" type="text/css"
+        href="/s/styles/github.css">
   <link rel="stylesheet" type="text/css" href="/main.css">
   <link rel="icon" type="image/png" href="/lenskit-mini.png">
   <link type="application/atom+xml" rel="alternate" href="/news/feed.xml">
   <script type="text/javascript" src="/s/modernizr.js"></script>
-  <script type="text/javascript">
-    WebFontConfig = {
-      google: { families: [ 'PT+Serif:400,400italic:latin', 'PT+Sans:400,700:latin', 'Inconsolata:400,700:latin' ] }
-    };
-    (function() {
-      var wf = document.createElement('script');
-      wf.src = ('https:' == document.location.protocol ? 'https' : 'http') +
-              '://ajax.googleapis.com/ajax/libs/webfont/1/webfont.js';
-      wf.type = 'text/javascript';
-      wf.async = 'true';
-      var s = document.getElementsByTagName('script')[0];
-      s.parentNode.insertBefore(wf, s);
-    })();
-  </script>
   <!-- you don't need to keep this, but it's cool for stats! -->
   <meta name="generator" content="nanoc <%= Nanoc::VERSION %>"> 
   <!-- page: <%= @item.identifier %> -->
@@ -84,6 +72,9 @@
   author. The contents of this page have not been reviewed or approved by the
   University of Minnesota.
 </footer>
-
+<script type="text/javascript" src="/s/highlight.pack.js"></script>
+<script type="text/javascript">
+ hljs.initHighlightingOnLoad();
+</script>
 </body>
 </html>
