--- a/r/master.css
+++ b/r/master.css
@@ -1,4 +1,3 @@
-@charset "UTF-8";
 meta.foundation-version {
   font-family: "/5.2.3/"; }
 
@@ -3763,7 +3762,7 @@ table {
 .text-left {
   text-align: left !important; }
 
-.text-right {
+.text-right, .project-info .read-more {
   text-align: right !important; }
 
 .text-center, header div, .use-case .uc-header {
@@ -5404,3 +5403,7 @@ header div {
 .use-case .uc-header .uc-logo {
   height: 120px;
   width: 120px; }
+
+.project-info .read-more {
+  font-style: italic;
+  font-size: 1.2rem; }
