--- a/_scss/_settings.scss
+++ b/_scss/_settings.scss
@@ -161,8 +161,8 @@ $paragraph-font-size: 1.2rem;
 
 // We use these to style <code> tags
 // $code-color: scale-color($alert-color, $lightness: -27%);
-// $code-font-family: Consolas, 'Liberation Mono', Courier, monospace;
-// $code-font-weight: $font-weight-bold;
+$code-font-family: Inconsolata, Consolas, Courier, monospace;
+$code-font-weight: normal;
 
 // We use these to style anchors
 // $anchor-text-decoration: none;
