more formatting for home page

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 layout: shell
 ---
 <div class="row">
-  <article class="main large-10 columns large-offset-1 end">
+  <article class="main small-12 columns">
     {{content}}
   </article>
 </div>
