--- a/_layouts/shell.html
+++ b/_layouts/shell.html
@@ -23,6 +23,9 @@
   {% include menu.html %}
 </div>
 {{content}}
+<footer>
+  {% include footer.html %}
+</footer>
 <script src="/bower_components/jquery/dist/jquery.min.js"></script>
 <script src="/bower_components/foundation/js/foundation.min.js"></script>
 <script src="/bower_components/highlightjs/highlight.pack.js"></script>
