--- a/_scss/_settings.scss
+++ b/_scss/_settings.scss
@@ -35,7 +35,7 @@
 // $include-html-grid-classes: $include-html-classes;
 // $include-xl-html-grid-classes: false;
 
-$row-width: 1300px;
+// $row-width: 1300px;
 // $total-columns: 12;
 
 // Global
