--- a/_includes/doc-nav.html
+++ b/_includes/doc-nav.html
@@ -1,6 +1,6 @@
 <ul class="side-nav">
-  <li class="heading">Documentation
-  <li><a href="versioning/">Versioning</a>
+  <li class="heading"><a href="/documentation/" data-match="exact">Documentation</a>
+  <li><a href="/documentation/versioning/">Versioning</a>
   <li><a href="/releases/">Release Notes</a>
   <li><a href="/apidocs/">API Docs ({{site.lenskit.version}})</a>
   {%if site.lenskit.prerelease%}
