--- a/_scss/_settings.scss
+++ b/_scss/_settings.scss
@@ -944,12 +944,12 @@ $code-font-weight: normal;
 // $include-html-nav-classes: $include-html-classes;
 
 // We use this to control padding.
-// $side-nav-padding: rem-calc(14 0);
+//$side-nav-padding: rem-calc(14 0);
 
 // We use these to control list styles.
 // $side-nav-list-type: none;
 // $side-nav-list-position: inside;
-$side-nav-list-margin: rem-calc(0 0 7 0);
+$side-nav-list-margin: rem-calc(0 0 0 0);
 
 // We use these to control link styles.
 // $side-nav-link-color: $primary-color;
@@ -957,7 +957,7 @@ $side-nav-list-margin: rem-calc(0 0 7 0);
 // $side-nav-link-color-hover: scale-color($side-nav-link-color, $lightness: 30%);
 // $side-nav-font-size: rem-calc(14);
 // $side-nav-font-weight: $font-weight-normal;
-// $side-nav-font-weight-active: $side-nav-font-weight;
+$side-nav-font-weight-active: bold;
 $side-nav-font-family: $header-font-family;
 // $side-nav-active-font-family: $side-nav-font-family;
 
