Selectively import Foundation modules

--- a/_scss/master.scss
+++ b/_scss/master.scss
@@ -1,5 +1,9 @@
 @import "settings";
-@import "foundation";
+// @import "foundation";
+@import "foundation/components/grid";
+@import "foundation/components/type";
+@import "foundation/components/top-bar";
+@import "foundation/components/side-nav";
 
 // Or selectively include components
 // @import
