add visibility component

--- a/_scss/master.scss
+++ b/_scss/master.scss
@@ -1,6 +1,7 @@
 @import "settings";
 // @import "foundation";
 @import "foundation/components/grid";
+@import "foundation/components/visibility";
 @import "foundation/components/type";
 @import "foundation/components/top-bar";
 @import "foundation/components/side-nav";
