--- a/_includes/rel-nav.html
+++ b/_includes/rel-nav.html
@@ -2,6 +2,10 @@
 <ul class="side-nav">
   <li class="heading"><a href="/releases/" data-match="exact">Releases</a>
   {% for rel in site.lenskit.releases %}
-  <li><a href="/releases/lenskit-{{rel}}.html">{{rel}}</a>
+  <li><a href="/releases/lenskit-{{rel}}.html">{{rel}}
+    {% if rel == site.lenskit.next %}(in progress)
+    {% elsif rel == site.lenskit.version %}(latest)
+    {% endif %}
+  </a>
   {% endfor %}
 </ul>
