--- a/_includes/rel-nav.html
+++ b/_includes/rel-nav.html
@@ -1,8 +1,10 @@
 {% include doc-nav.html %}
 <ul class="side-nav">
   <li class="heading"><a href="/releases/" data-match="exact">Releases</a>
-  {% for rel in site.lenskit.releases %}
-  <li><a href="/releases/lenskit-{{rel}}.html">{{rel}}
+  {% assign relPages = site.pages | where:'version','release' %}
+  {% assign sortedPages = relPages | sort: 'milestone' %}
+  {% for rel in relPages %}
+  <li><a href="/releases/lenskit-{{rel.url}}.html">{{rel.title}}
     {% if rel == site.lenskit.next %}(in progress)
     {% elsif rel == site.lenskit.version %}(latest)
     {% endif %}
