--- a/s/master.css
+++ b/s/master.css
@@ -147,6 +147,12 @@ select {
   width: 100%;
   float: left; }
 
+[class*="column"] + [class*="column"]:last-child {
+  float: right; }
+
+[class*="column"] + [class*="column"].end {
+  float: left; }
+
 @media only screen {
   .small-push-0 {
     position: relative;
@@ -311,12 +317,6 @@ select {
   .small-12 {
     width: 100%; }
 
-  [class*="column"] + [class*="column"]:last-child {
-    float: right; }
-
-  [class*="column"] + [class*="column"].end {
-    float: left; }
-
   .small-offset-0 {
     margin-left: 0% !important; }
 
@@ -364,13 +364,21 @@ select {
   .columns.small-centered {
     margin-left: auto;
     margin-right: auto;
-    float: none !important; }
+    float: none; }
 
   .column.small-uncentered,
   .columns.small-uncentered {
     margin-left: 0;
     margin-right: 0;
-    float: left !important; }
+    float: left; }
+
+  .column.small-centered:last-child,
+  .columns.small-centered:last-child {
+    float: none; }
+
+  .column.small-uncentered:last-child,
+  .columns.small-uncentered:last-child {
+    float: left; }
 
   .column.small-uncentered.opposite,
   .columns.small-uncentered.opposite {
@@ -539,12 +547,6 @@ select {
   .medium-12 {
     width: 100%; }
 
-  [class*="column"] + [class*="column"]:last-child {
-    float: right; }
-
-  [class*="column"] + [class*="column"].end {
-    float: left; }
-
   .medium-offset-0 {
     margin-left: 0% !important; }
 
@@ -592,13 +594,21 @@ select {
   .columns.medium-centered {
     margin-left: auto;
     margin-right: auto;
-    float: none !important; }
+    float: none; }
 
   .column.medium-uncentered,
   .columns.medium-uncentered {
     margin-left: 0;
     margin-right: 0;
-    float: left !important; }
+    float: left; }
+
+  .column.medium-centered:last-child,
+  .columns.medium-centered:last-child {
+    float: none; }
+
+  .column.medium-uncentered:last-child,
+  .columns.medium-uncentered:last-child {
+    float: left; }
 
   .column.medium-uncentered.opposite,
   .columns.medium-uncentered.opposite {
@@ -887,12 +897,6 @@ select {
   .large-12 {
     width: 100%; }
 
-  [class*="column"] + [class*="column"]:last-child {
-    float: right; }
-
-  [class*="column"] + [class*="column"].end {
-    float: left; }
-
   .large-offset-0 {
     margin-left: 0% !important; }
 
@@ -940,13 +944,21 @@ select {
   .columns.large-centered {
     margin-left: auto;
     margin-right: auto;
-    float: none !important; }
+    float: none; }
 
   .column.large-uncentered,
   .columns.large-uncentered {
     margin-left: 0;
     margin-right: 0;
-    float: left !important; }
+    float: left; }
+
+  .column.large-centered:last-child,
+  .columns.large-centered:last-child {
+    float: none; }
+
+  .column.large-uncentered:last-child,
+  .columns.large-uncentered:last-child {
+    float: left; }
 
   .column.large-uncentered.opposite,
   .columns.large-uncentered.opposite {
@@ -1775,7 +1787,13 @@ blockquote p {
     font-size: 1.6875rem; }
 
   h4 {
-    font-size: 1.4375rem; } }
+    font-size: 1.4375rem; }
+
+  h5 {
+    font-size: 1.125rem; }
+
+  h6 {
+    font-size: 1rem; } }
 /*
  * Print styles.
  *
@@ -2074,27 +2092,26 @@ meta.foundation-mq-topbar {
       height: 45px;
       line-height: 45px; }
     .top-bar .toggle-topbar.menu-icon {
-      right: 15px;
       top: 50%;
-      margin-top: -16px;
-      padding-left: 40px; }
+      margin-top: -16px; }
       .top-bar .toggle-topbar.menu-icon a {
         height: 34px;
         line-height: 33px;
-        padding: 0;
+        padding: 0 40px 0 15px;
         color: white;
         position: relative; }
-        .top-bar .toggle-topbar.menu-icon a::after {
-          right: 0; }
-          .top-bar .toggle-topbar.menu-icon a::after span:after {
-            content: '';
-            position: absolute;
-            display: block;
-            height: 0;
-            box-shadow: 0 0px 0 1px white, 0 7px 0 1px white, 0 14px 0 1px white;
-            width: 16px; }
-          .top-bar .toggle-topbar.menu-icon a::after span:hover:after {
-            box-shadow: 0 0px 0 1px white, 0 7px 0 1px white, 0 14px 0 1px white; }
+        .top-bar .toggle-topbar.menu-icon a span::after {
+          content: "";
+          position: absolute;
+          display: block;
+          height: 0;
+          top: 50%;
+          margin-top: -8px;
+          right: 15px;
+          box-shadow: 0 0px 0 1px white, 0 7px 0 1px white, 0 14px 0 1px white;
+          width: 16px; }
+        .top-bar .toggle-topbar.menu-icon a span:hover:after {
+          box-shadow: 0 0px 0 1px white, 0 7px 0 1px white, 0 14px 0 1px white; }
   .top-bar.expanded {
     height: auto;
     background: transparent; }
@@ -2206,6 +2223,7 @@ meta.foundation-mq-topbar {
         .top-bar-section ul li > button.alert:hover, .top-bar-section ul li > button.alert:focus {
           color: white; }
     .top-bar-section ul li:hover:not(.has-form) > a {
+      background-color: #555555;
       background: #272727;
       color: white; }
     .top-bar-section ul li.active > a {
@@ -2327,6 +2345,7 @@ meta.foundation-mq-topbar {
         .top-bar-section ul li .js-generated {
           display: none; }
     .top-bar-section li.hover > a:not(.button) {
+      background-color: #555555;
       background: #272727;
       color: white; }
     .top-bar-section li:not(.has-form) a:not(.button) {
@@ -2334,6 +2353,7 @@ meta.foundation-mq-topbar {
       line-height: 45px;
       background: #333333; }
       .top-bar-section li:not(.has-form) a:not(.button):hover {
+        background-color: #555555;
         background: #272727; }
     .top-bar-section li.active:not(.has-form) a:not(.button) {
       padding: 0 15px;
@@ -2394,6 +2414,7 @@ meta.foundation-mq-topbar {
         background: #333333; }
       .top-bar-section .dropdown li:not(.has-form):hover > a:not(.button) {
         color: white;
+        background-color: #555555;
         background: #272727; }
       .top-bar-section .dropdown li label {
         white-space: nowrap;
@@ -2424,6 +2445,7 @@ meta.foundation-mq-topbar {
         left: 100%; }
 
   .no-js .top-bar-section ul li:hover > a {
+    background-color: #555555;
     background: #272727;
     color: white; }
   .no-js .top-bar-section ul li:active > a {
@@ -2442,7 +2464,7 @@ meta.foundation-mq-topbar {
   margin: 0;
   padding: 0.875rem 0;
   list-style-type: none;
-  list-style-position: inside;
+  list-style-position: outside;
   font-family: "PT Sans", sans-serif; }
   .side-nav li {
     margin: 0 0 0 0;
@@ -2511,3 +2533,12 @@ footer {
   font-family: "PT Sans Caption", "PT Sans", sans-serif; }
   .side-nav .heading a {
     font-family: "PT Sans Caption", "PT Sans", sans-serif !important; }
+
+.citation {
+  line-height: 130%;
+  font-size: 1.2rem;
+  padding-left: 2em;
+  padding-right: 2em;
+  margin-bottom: 1.25rem; }
+  .citation .pub-title {
+    font-style: italic; }
