--- a/_scss/_settings.scss
+++ b/_scss/_settings.scss
@@ -154,7 +154,7 @@ $header-font-family: 'PT Sans', sans-serif;
 $paragraph-font-size: 1.2rem;
 // $paragraph-line-height: 1.6;
 // $paragraph-margin-bottom: rem-calc(20);
-// $paragraph-aside-font-size: rem-calc(14);
+$paragraph-aside-font-size: rem-calc(16);
 // $paragraph-aside-line-height: 1.35;
 // $paragraph-aside-font-style: italic;
 // $paragraph-text-rendering: optimizeLegibility;
