--- a/s/master.css
+++ b/s/master.css
@@ -1594,7 +1594,7 @@ p {
     font-size: 1.41875rem;
     line-height: 1.6; }
   p aside {
-    font-size: 0.875rem;
+    font-size: 1rem;
     line-height: 1.35;
     font-style: italic; }
 
@@ -2537,8 +2537,15 @@ footer {
 .citation {
   line-height: 130%;
   font-size: 1.2rem;
-  padding-left: 2em;
-  padding-right: 2em;
+  padding-left: 2rem;
+  padding-right: 2rem;
   margin-bottom: 1.25rem; }
-  .citation .pub-title {
+  .citation .pub-venue {
     font-style: italic; }
+
+aside {
+  font-style: italic;
+  font-size: 1rem;
+  margin-bottom: 1.25rem;
+  padding-left: 2rem;
+  padding-right: 2rem; }
