--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -12,6 +12,7 @@
       <li><a href="/download/">Download</a>
       <li><a href="/documentation/" data-match="re:^/(documentation|releases)/">Documentation</a>
       <li><a href="/research/">Research</a>
+      <li><a href="/connect/">Connect</a>
     </ul>
   </section>
 </nav>
