--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -8,7 +8,7 @@
   </ul>
   <section class="top-bar-section" id="site-menu">
     <ul class="right">
-      <li><a href="/news/">News</a>
+      <!-- <li><a href="/news/">News</a> -->
       <li><a href="/download/">Download</a>
       <li><a href="/documentation/" data-match="re:^/(documentation|releases)/">Documentation</a>
       <li><a href="/research/">Research</a>
