--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-Copyright © 2010–2014 Regents of the University of Minnesota.
+Copyright © 2010–2014 <a href="https://github.com/lenskit/lenskit/blob/master/CONTRIBUTORS.md">LensKit Contributors</a>.
 <a href="/thanks/">Acknowledgements and Credits</a>.<br>
 The views and opinions expressed in this page are strictly those of the page author.
 The contents of this page have not been reviewed or approved by the University of Minnesota.
