Move LensKit info to _data

--- a/_layouts/shell.html
+++ b/_layouts/shell.html
@@ -23,7 +23,7 @@
   {% include menu.html %}
 </div>
 {{content}}
-<footer>
+<footer class="row">
   {% include footer.html %}
 </footer>
 <script src="/bower_components/jquery/dist/jquery.min.js"></script>
