--- a/_includes/doc-nav.html
+++ b/_includes/doc-nav.html
@@ -4,9 +4,9 @@
   <li><a href="https://github.com/grouplens/lenskit/wiki/Manual">Manual</a>
   <li><a href="/documentation/versioning/">Versioning</a>
   <li><a href="/releases/">Release Notes</a>
-  <li><a href="/apidocs/">API Docs ({{site.lenskit.version}})</a>
-  {%if site.lenskit.prerelease%}
-  <li><a href="/next/apidocs/">API Docs (milestone {{site.lenskit.prerelease}})</a>
+  <li><a href="/apidocs/">API Docs ({{site.data.lenskit.version}})</a>
+  {%if site.data.lenskit.prerelease%}
+  <li><a href="/next/apidocs/">API Docs (milestone {{site.data.lenskit.prerelease}})</a>
   {%endif%}
   <li><a href="/master/apidocs/">API Docs (development)</a>
 </ul>
