--- a/_includes/rel-nav.html
+++ b/_includes/rel-nav.html
@@ -1,10 +1,10 @@
 {% include doc-nav.html %}
 <ul class="side-nav">
   <li class="heading"><a href="/releases/" data-match="exact">Releases</a>
-  {% for rel in site.lenskit.releases %}
+  {% for rel in site.data.lenskit.releases %}
   <li><a href="/releases/lenskit-{{rel}}.html">Release {{rel}}
-    {% if rel == site.lenskit.next %}(in progress)
-    {% elsif rel == site.lenskit.version %}(latest)
+    {% if rel == site.data.lenskit.next %}(in progress)
+    {% elsif rel == site.data.lenskit.version %}(latest)
     {% endif %}
   </a>
   {% endfor %}
