Upgrade Jekyll, etc.

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -1,10 +1,10 @@
-<nav class="top-bar">
+<nav class="top-bar" data-topbar role="navigation">
   <ul class="title-area">
-    <li class="name">
     {% if page.header.title != "hide" %}
+    <li class="name">
     <h1><a href="/">LensKit</a></h1>
-    {% endif %}
     </li>
+    {% endif %}
   </ul>
   <section class="top-bar-section" id="site-menu">
     <ul class="right">
