--- a/_sass/_settings.scss
+++ b/_sass/_settings.scss
@@ -33,6 +33,7 @@
 // Grid
 
 // $include-html-grid-classes: $include-html-classes;
+$include-html-grid-classes: true;
 // $include-xl-html-grid-classes: false;
 
 // $row-width: 1300px;
