--- a/_includes/doc-nav.html
+++ b/_includes/doc-nav.html
@@ -1,7 +1,8 @@
 <ul class="side-nav">
   <li class="heading"><a href="/documentation/" data-match="exact">Documentation</a>
-  <li><a href="https://github.com/grouplens/lenskit/wiki/GettingStarted">Getting Started</a>
-  <li><a href="https://github.com/grouplens/lenskit/wiki/Manual">Manual</a>
+  <li><a href="/documentation/getting-started/">Getting Started</a>
+  <li><a href="/documentation/algorithms/">Algorithms</a>
+  <li><a href="/documentation/evaluator/">Evaluator</a>
   <li><a href="/documentation/versioning/">Versioning</a>
   <li><a href="/releases/">Release Notes</a>
   <li><a href="/apidocs/">API Docs ({{site.data.lenskit.version}})</a>
