--- a/_includes/doc-nav.html
+++ b/_includes/doc-nav.html
@@ -1,6 +1,6 @@
 <ul class="side-nav">
   <li class="heading"><a href="/documentation/" data-match="exact">Documentation</a>
-  <li><a href="/documentation/getting-started/">Getting Started</a>
+  <li><a href="/documentation/basics/">LensKit Basics</a>
   <li><a href="/documentation/algorithms/">Algorithms</a>
   <li><a href="/documentation/evaluator/">Evaluator</a>
   <li><a href="/documentation/versioning/">Versioning</a>
