Add drop-drown menu for documentation

--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -10,7 +10,14 @@
     <ul class="right">
       <li><a href="/news/">News</a>
       <li><a href="/download/">Download</a>
-      <li><a href="/documentation/" data-match="re:^/(documentation|releases)/">Documentation</a>
+      <li class="has-dropdown">
+        <a href="/documentation/" data-match="re:^/(documentation|releases)/">Documentation</a>
+        <ul class="dropdown">
+          <li><a href="/documentation/basics/">LensKit Basics</a>
+          <li><a href="/documentation/algorithms/">Algorithms</a>
+          <li><a href="/documentation/evaluator/">Evaluator</a>
+          <li><a href="/apidocs/">API Documentation</a>
+        </ul>
       <li><a href="/research/">Research</a>
       <li><a href="/connect/">Connect</a>
     </ul>
