Add man pages to web site (closes #2)

--- a/_includes/doc-nav.html
+++ b/_includes/doc-nav.html
@@ -3,6 +3,7 @@
   <li><a href="/documentation/basics/">LensKit Basics</a>
   <li><a href="/documentation/algorithms/">Algorithms</a>
   <li><a href="/documentation/evaluator/">Evaluator</a>
+  <li><a href="/documentation/cli/">CLI Tools</a>
   <li><a href="/documentation/versioning/">Versioning</a>
   <li><a href="/releases/">Release Notes</a>
   <li><a href="/apidocs/">API Docs ({{site.data.lenskit.version}})</a>
