--- a/_includes/menu.html
+++ b/_includes/menu.html
@@ -16,6 +16,7 @@
           <li><a href="/documentation/basics/">LensKit Basics</a>
           <li><a href="/documentation/algorithms/">Algorithms</a>
           <li><a href="/documentation/evaluator/">Evaluator</a>
+          <li><a href="/documentation/cli/">CLI Tools</a>
           <li><a href="/apidocs/">API Documentation</a>
         </ul>
       <li><a href="/research/">Research</a>
